RESOLVED FIXED18906
[GTK] Fix varargs terminator in g_build_filename()
https://bugs.webkit.org/show_bug.cgi?id=18906
Summary [GTK] Fix varargs terminator in g_build_filename()
Gwenole Beauchesne
Reported 2008-05-06 04:18:47 PDT
g_build_filename() is NULL terminated, or (void *)0 with your coding style if you prefer. It currently works by luck on Linux/x86_64 because g_build_filename() args are <= 6, so they are all passed through registers.
Attachments
Fix varargs terminator (994 bytes, patch)
2008-05-06 04:19 PDT, Gwenole Beauchesne
alp: review+
Gwenole Beauchesne
Comment 1 2008-05-06 04:19:29 PDT
Created attachment 20982 [details] Fix varargs terminator
Alp Toker
Comment 2 2008-05-06 13:20:31 PDT
Comment on attachment 20982 [details] Fix varargs terminator r=me The patch utility didn't like this, I had to hand apply it. Please check the formatting of the ChangeLog entry too next time. Thanks
Alp Toker
Comment 3 2008-05-06 13:21:07 PDT
Landed in r32913.
Note You need to log in before you can comment on or make changes to this bug.