2008-05-06  Gwenole Beauchesne  <gbeauchesne@splitted-desktop.org>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18906
        [GTK] Fix varargs terminator in g_build_filename()

        * plugins/gtk/PluginDatabaseGtk.cpp:
        (WebCore::PluginDatabase::isPreferredPluginDirectory): Fix varargs
        terminator.


Canonical link: https://commits.webkit.org/26122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32913 268f45cc-cd09-0410-ab3c-d52691b4dbfc